// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should match the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c1:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c1:hover + .c3,
.c1:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c4 {
  color: #999999;
}

.c1[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c1[disabled]:checked + .c3 {
  background-color: #999999;
}

.c1[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c2 {
  width: 0px;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <input
      checked={false}
      className="HiddenInput-sc-14w753s-0 c1"
      disabled={false}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 c3 "
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="Label-sc-1ny5bqy-0 c4 c5"
      htmlFor=""
    >
      
    </label>
  </div>
  
</div>
`;

exports[`<Checkbox /> should match the snapshot 2`] = `
.c6 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c7 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c7:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c7:hover + .c3,
.c7:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c7[disabled] ~ .c4 {
  color: #999999;
}

.c7[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c7[disabled]:checked + .c3 {
  background-color: #999999;
}

.c7[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c1:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c1:hover + .c3,
.c1:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1 + .c3 {
  border-color: #e91b0c;
}

.c1:checked + .c3 {
  background-color: #e91b0c;
}

.c1:hover + .c3,
.c1:focus + .c3 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c4 {
  color: #999999;
}

.c1[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c1[disabled]:checked + .c3 {
  background-color: #999999;
}

.c1[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c2 {
  width: 0px;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <input
      checked={false}
      className="HiddenInput-sc-14w753s-0 c1"
      disabled={false}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 c3 "
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="Label-sc-1ny5bqy-0 c4 c5"
      htmlFor=""
    >
      
    </label>
  </div>
  <span
    className="c6"
  >
    error message
  </span>
</div>
`;

exports[`<Checkbox /> should match the snapshot 3`] = `
.c6 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c7 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c7:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c7:hover + .c3,
.c7:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c7[disabled] ~ .c4 {
  color: #999999;
}

.c7[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c7[disabled]:checked + .c3 {
  background-color: #999999;
}

.c7[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c1:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c1:hover + .c3,
.c1:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1 + .c3 {
  border-color: #e91b0c;
}

.c1:checked + .c3 {
  background-color: #e91b0c;
}

.c1:hover + .c3,
.c1:focus + .c3 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c4 {
  color: #999999;
}

.c1[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c1[disabled]:checked + .c3 {
  background-color: #999999;
}

.c1[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c2 {
  width: 0px;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <input
      checked={true}
      className="HiddenInput-sc-14w753s-0 c1"
      disabled={false}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 c3 "
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="Label-sc-1ny5bqy-0 c4 c5"
      htmlFor=""
    >
      
    </label>
  </div>
  <span
    className="c6"
  >
    error message
  </span>
</div>
`;

exports[`<Checkbox /> should match the snapshot 4`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c1:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c1:hover + .c3,
.c1:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c4 {
  color: #999999;
}

.c1[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c1[disabled]:checked + .c3 {
  background-color: #999999;
}

.c1[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c6 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c6:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c6:hover + .c3,
.c6:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c6 + .c3 {
  border-color: #e91b0c;
}

.c6:checked + .c3 {
  background-color: #e91b0c;
}

.c6:hover + .c3,
.c6:focus + .c3 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c6[disabled] ~ .c4 {
  color: #999999;
}

.c6[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c6[disabled]:checked + .c3 {
  background-color: #999999;
}

.c6[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c2 {
  width: 0px;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <input
      checked={true}
      className="HiddenInput-sc-14w753s-0 c1"
      disabled={false}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 c3 "
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="Label-sc-1ny5bqy-0 c4 c5"
      htmlFor=""
    >
      
    </label>
  </div>
  
</div>
`;

exports[`<Checkbox /> should match the snapshot 5`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c1:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c1:hover + .c3,
.c1:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c4 {
  color: #999999;
}

.c1[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c1[disabled]:checked + .c3 {
  background-color: #999999;
}

.c1[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c6 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c6:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c6:hover + .c3,
.c6:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c6 + .c3 {
  border-color: #e91b0c;
}

.c6:checked + .c3 {
  background-color: #e91b0c;
}

.c6:hover + .c3,
.c6:focus + .c3 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c6[disabled] ~ .c4 {
  color: #999999;
}

.c6[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c6[disabled]:checked + .c3 {
  background-color: #999999;
}

.c6[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c2 {
  width: 0px;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <input
      checked={false}
      className="HiddenInput-sc-14w753s-0 c1"
      disabled={true}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 c3 "
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="Label-sc-1ny5bqy-0 c4 c5"
      htmlFor=""
    >
      
    </label>
  </div>
  
</div>
`;

exports[`<Checkbox /> should match the snapshot 6`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c1:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c1:hover + .c3,
.c1:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c4 {
  color: #999999;
}

.c1[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c1[disabled]:checked + .c3 {
  background-color: #999999;
}

.c1[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c6 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c6:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c6:hover + .c3,
.c6:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c6 + .c3 {
  border-color: #e91b0c;
}

.c6:checked + .c3 {
  background-color: #e91b0c;
}

.c6:hover + .c3,
.c6:focus + .c3 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c6[disabled] ~ .c4 {
  color: #999999;
}

.c6[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c6[disabled]:checked + .c3 {
  background-color: #999999;
}

.c6[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c2 {
  width: 0px;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <input
      checked={false}
      className="HiddenInput-sc-14w753s-0 c1"
      disabled={false}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 c3 "
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="Label-sc-1ny5bqy-0 c4 c5"
      htmlFor=""
    >
      Some text
    </label>
  </div>
  
</div>
`;

exports[`<Checkbox /> should match the snapshot 7`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c1:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c1:hover + .c3,
.c1:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c4 {
  color: #999999;
}

.c1[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c1[disabled]:checked + .c3 {
  background-color: #999999;
}

.c1[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c6 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c6:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c6:hover + .c3,
.c6:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c6 + .c3 {
  border-color: #e91b0c;
}

.c6:checked + .c3 {
  background-color: #e91b0c;
}

.c6:hover + .c3,
.c6:focus + .c3 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c6[disabled] ~ .c4 {
  color: #999999;
}

.c6[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c6[disabled]:checked + .c3 {
  background-color: #999999;
}

.c6[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c2 {
  width: 0px;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <input
      checked={true}
      className="HiddenInput-sc-14w753s-0 c1"
      disabled={true}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 c3 "
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="Label-sc-1ny5bqy-0 c4 c5"
      htmlFor=""
    >
      
    </label>
  </div>
  
</div>
`;
